Add the internal API for the agents to use, which allows the agents to send the metrics through. Still need extra work on pushing those data onto Kafka and Elasticsearch for future work
